# BodyTempSensorVer2

./: .clang-format  CMakeLists.txt  README.md  app.overlay  prj.conf
.cache/clangd/index/: common.h.599BEF5007C40349.idx  main.c.C0A1061B0C8CE5A7.idx  mlx90614.c.02F81C9EE227ED24.idx  mlx90614.h.4B52D4BD0A790C43.idx
src/: main.c
src/drivers/mlx90614/: mlx90614.c  mlx90614.h
src/drivers/my_ble/: my_ble.c  my_ble.h
src/drivers/my_button/: my_button.c  my_button.h
src/drivers/my_display/: my_display.c  my_display.h
src/drivers/my_move_sensor/: my_move_sensor.c  my_move_sensor.h
src/drivers/my_timer/: my_timer.c  my_timer.h
src/handlers/: my_hadler_common.c  my_hadler_common.h  my_hadler_meas.c  my_hadler_meas.h  my_hadler_wait.c  my_hadler_wait.h  my_handler.c  my_handler.h
src/utils/: common.h  global.c  global.h  my_event.h  my_state.h
